# power-ba

./: .gitignore  README.md  install-whisper-arch.sh  install.sh  pyproject.toml  requirements-diarization.txt  requirements.txt  smoke_test.py  uninstall.sh
power_ba/: __init__.py  capture.py  cli.py  config.py  context.py  diarization.py  llm.py  runtime.py  stt.py  tui.py
prompts/: business_analyst.txt
