[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-ba"
version = "0.1.0"
description = "Linux-first CLI meeting assistant for transcription and AI follow-up questions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.3",
  "PyYAML>=6.0.1",
  "openai>=1.40.0",
  "anthropic>=0.35.0",
  "vosk>=0.3.45",
  "textual>=0.76.0",
]

[project.optional-dependencies]
diarization = [
  "pyannote.audio>=3.2.0",
]

[project.scripts]
power-bi = "power_ba.cli:run"
power-ba = "power_ba.cli:run"

[tool.setuptools.packages.find]
include = ["power_ba*"]
